automatically merged revision 864150: do not attempt to recover incorrectly written hexadecimal colours when the parser is in strict mode.

BUG: 132581

svn path=/branches/KDE/4.1/kdelibs/; revision=864158